--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,62 @@
-.App {
-  text-align: center;
+#root {
+  max-width: 1000px;
+  min-width: 400px;
+  margin: 0 auto;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+header {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-between;
+  background-color: aliceblue;
 }
 
-.App-link {
-  color: #61dafb;
+header h1 {
+  background-color: aqua;
+  padding: 0 5%;
+  text-align: left;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.login {
+  width: 20%;
+  padding: 0;
+  margin: 0;
+}
+
+.login-input {
+  display: flex;
+  justify-content: space-between;
+}
+
+.login-input input {
+  width: 95%;
+}
+
+.login button {
+  width: 50%;
+  padding: 0%;
+}
+
+.login-sub {
+  margin: 0;
+}
+
+.login-sub span {
+  margin: 0 auto;
+  font-size: 0.7em;
+}
+
+.menu-bar {
+  display: flex;
+  justify-content: flex-start;
+}
+
+.menu-bar * {
+  margin-right: 2vmin;
+}
+
+.main {
+  margin: 0 auto;
+  padding: 0 1vmin;
+  background-color: bisque;
+  overflow: auto;
 }
