--- a/src/App.css
+++ b/src/App.css
@@ -66,12 +66,16 @@ header h1 {
   margin: 0 auto;
 }
 
-.menu-bar ul {
-  padding: 0 1vmin;
+.menu-bar {
+  display: flex;
+  flex-wrap: wrap;
+  align-content: stretch;
 }
 
-.menu-bar li {
-  margin-right: 2vmin;
+.menu-bar p {
+  height: 100%;
+  padding: 1vmin;
+  margin: 0;
   display: inline;
   cursor: pointer;
 }
