--- a/src/App.css
+++ b/src/App.css
@@ -117,6 +117,29 @@ header h1 {
   border-bottom: 1px solid;
 }
 
+.table-row .table-user {
+  font-weight: bold;
+  flex: 1;
+}
+
+.table-row .table-data {
+  text-align: right;
+  flex: 3;
+}
+
+.table-row .table-goal {
+  flex: 3;
+}
+
+.table-row .table-goal p {
+  margin: 0;
+}
+
+.table-row .table-goal .goal-text {
+  margin-bottom: 0.1rem;
+  font-weight: 500;
+}
+
 .table-row .goal-name {
   flex: 1;
 }
