--- a/src/App.css
+++ b/src/App.css
@@ -163,7 +163,8 @@ header h1 {
 .record-day {
   display: flex;
   justify-content: flex-start;
-  margin: 1rem 0;
+  padding: 0.5rem 0;
+  margin: 0;
   border-bottom: 1px groove;
 }
 
@@ -173,6 +174,7 @@ header h1 {
   font-weight: bold;
 }
 
-.record-day span {
+.record-day div {
+  display: block;
   flex: 3;
 }
