--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 #root {
   max-width: 1000px;
   min-width: 400px;
+  background-color: antiquewhite;
   margin: 0 auto;
 }
 
@@ -33,7 +34,7 @@ header h1 {
   display: none;
   position: absolute;
   right: 0;
-  background-color: deeppink;
+  background-color: aquamarine;
   max-width: 200px;
   max-height: 100px;
   padding: 0;
@@ -70,6 +71,7 @@ header h1 {
 .menu-bar {
   display: flex;
   flex-wrap: wrap;
+  background-color: bisque;
   align-content: stretch;
 }
 
@@ -84,7 +86,6 @@ header h1 {
 .main {
   margin: 0 auto;
   padding: 0 1rem;
-  background-color: bisque;
   overflow: auto;
 }
 
