--- a/src/App.css
+++ b/src/App.css
@@ -23,6 +23,11 @@ header h1 {
   margin: auto 1rem;
   height: 100%;
   cursor: pointer;
+  position: relative;
+}
+
+.user-icon {
+  display: 'flex'
 }
 
 .people-icon {
@@ -34,10 +39,10 @@ header h1 {
   display: none;
   position: absolute;
   right: 0;
+  left: auto;
   background-color: aquamarine;
-  max-width: 200px;
-  max-height: 100px;
-  padding: 0;
+  width: 200px;
+  padding: 0.5rem;
   margin: 0;
 }
 
