목표 텍스트 각오 한마디로 변경

--- a/src/App.css
+++ b/src/App.css
@@ -27,7 +27,11 @@ header h1 {
 }
 
 .user-icon {
-  display: 'flex'
+  display: flex;
+}
+
+.user-icon p {
+  margin: auto 1rem;
 }
 
 .people-icon {
