--- a/src/App.css
+++ b/src/App.css
@@ -111,16 +111,19 @@ button {
   overflow-y: hidden;
   background-color: bisque;
   align-content: stretch;
-
 }
 
-.menu-bar p {
+.menu-bar * {
   flex: 0 0 auto;
   height: 100%;
   padding: 1rem;
   margin: 0;
-  display: inline;
-  cursor: pointer;
+  color: black;
+  text-decoration: none;
+}
+
+.active-menu {
+  background-color: red;
 }
 
 .main {
