--- a/src/App.css
+++ b/src/App.css
@@ -9,11 +9,13 @@ header {
   display: flex;
   justify-content: space-between;
   background-color: aliceblue;
+  background-image: url("/public/background.png");
+  background-repeat: repeat-x;
+  background-size: 300px;
   padding: 5;
 }
 
 header h1 {
-  background-color: aqua;
   margin: 0;
   padding: 1rem;
   text-align: left;
@@ -123,7 +125,7 @@ button {
 }
 
 .active-menu {
-  background-color: red;
+  background-color: pink;
 }
 
 .main {
